tests/fail/semantics/multiple_main_entrypoints/main.kira
@Main
function first() {
    return;
}

@Main
function second() {
    return;
}
